#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([LSmethod], [0.1], [prime@kmc.gr.jp])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([sparse_matrix.cpp])
AC_CONFIG_HEADERS([config.h])

: ${CXXFLAGS=""}

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
